test update functional